--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,251 @@
 ---
 title: Le Wagon Middleman boilerplate
 ---
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+        <div class="banner-content">
+          <h1>WELCOME HOME</h1>
+          <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+          <%= link_to "How it works", "#", class: "btn btn-primary btn-lg" %>
+        </div>
+      </div>
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
-</div>
+      <!-- Your features code -->
+      <div class="container">
+        <div class="feature text-center padded">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <%= image_tag "globe.png" %>
+              <h2>Discover the world</h2>
+              <p>The earth is your new home.</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <%= image_tag "dollar.png" %>
+              <h2>Pay online</h2>
+              <p>No cash issues anymore.</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <%= image_tag "beer.png" %>
+              <h2>Meet people</h2>
+              <p>Discover new culture and lifestyle.</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <%= image_tag "heart.png" %>
+              <h2>Share and love</h2>
+              <p>Join a community you will love.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Your cards code -->
+      <div class="wrapper-grey">
+        <div class="container">
+          <div class="cards padded">
+            <div class="row">
+              <h2 class="text-center">Your next trip</h2>
+
+              <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+                  <%= image_tag "arthur.jpg", class: "avatar avatar-large card-user" %>
+                  <div class="card-category">Paris</div>
+                  <div class="card-description">
+                    <h2>Arthur's home</h2>
+                    <p>Charming room with patio</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
+                  <%= image_tag "roxane.jpg", class: "avatar avatar-large card-user" %>
+                  <div class="card-category">Brussels</div>
+                  <div class="card-description">
+                    <h2>Roxane's home</h2>
+                    <p>Lovely house</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
+                  <%= image_tag "guillaume.jpg", class: "avatar avatar-large card-user" %>
+                  <div class="card-category">London</div>
+                  <div class="card-description">
+                    <h2>Guillaume's home</h2>
+                    <p>Nice flat in Piccadilly</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Your newsletter code -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="text-center padded">
+              <h2 class="text-center">Get news from us</h2>
+              <p>Leave us your mail and get news from us</p>
+              <form class="form-inline">
+                <input type="email" class="form-control" placeholder="bob@gmail.com">
+                <input type="submit" value="Subscribe" class="btn btn-primary">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Your map code -->
+      <div id="map" style="width: 100%; height: 400px;"></div>
+
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+      <script type="text/javascript">
+        var myLatlng = new google.maps.LatLng(48.8655909, 2.378983);
+
+        var myOptions = {
+          zoom: 16,
+          center: myLatlng,
+          scrollwheel: false,
+          mapTypeId: google.maps.MapTypeId.ROADMAP,
+          styles: [
+    {
+        "featureType": "administrative",
+        "elementType": "all",
+        "stylers": [
+            {
+                "saturation": "-100"
+            }
+        ]
+    },
+    {
+        "featureType": "administrative.province",
+        "elementType": "all",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "landscape",
+        "elementType": "all",
+        "stylers": [
+            {
+                "saturation": -100
+            },
+            {
+                "lightness": 65
+            },
+            {
+                "visibility": "on"
+            }
+        ]
+    },
+    {
+        "featureType": "poi",
+        "elementType": "all",
+        "stylers": [
+            {
+                "saturation": -100
+            },
+            {
+                "lightness": "50"
+            },
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "road",
+        "elementType": "all",
+        "stylers": [
+            {
+                "saturation": "-100"
+            }
+        ]
+    },
+    {
+        "featureType": "road.highway",
+        "elementType": "all",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "road.arterial",
+        "elementType": "all",
+        "stylers": [
+            {
+                "lightness": "30"
+            }
+        ]
+    },
+    {
+        "featureType": "road.local",
+        "elementType": "all",
+        "stylers": [
+            {
+                "lightness": "40"
+            }
+        ]
+    },
+    {
+        "featureType": "transit",
+        "elementType": "all",
+        "stylers": [
+            {
+                "saturation": -100
+            },
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "water",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "hue": "#ffff00"
+            },
+            {
+                "lightness": -25
+            },
+            {
+                "saturation": -97
+            }
+        ]
+    },
+    {
+        "featureType": "water",
+        "elementType": "labels",
+        "stylers": [
+            {
+                "lightness": -25
+            },
+            {
+                "saturation": -100
+            }
+        ]
+    }
+]
+          };
+
+      var map = new google.maps.Map(document.getElementById('map'), myOptions);
+      var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: "You are here!"
+      });
+      </script>
