--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -1,30 +1,20 @@
 #footer {
-  background: #333333;
+  background: $gray-white;
   padding: 30px 0;
-  color: #CCCCCC;
+  color: $gray-dark;
+  i {
+    color: $gray-dark;
+    font-size: 30px;
+    letter-spacing: 20px;
+    transition: color 0.5s ease;
+    &:hover {
+      color: $yellow;
+    }
+  }
+  ul {
+    margin-top: 10px;
+  }
+  p {
+    margin-top: 17px;
+  }
 }
-
-#footer i {
-  color: #CCCCCC;
-  font-size: 30px;
-  letter-spacing: 20px;
-  transition: color 0.5s ease;
-}
-
-#footer i:hover {
-  color: yellow;
-}
-
-#footer ul {
-  margin-top: 10px;
-}
-
-#footer p {
-  margin-top: 17px;
-}
-
-ul {
-  margin-bottom: 10px;
-}
-
-/* Footer design */
