--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,38 +48,19 @@ title: Le Wagon Middleman boilerplate
             <div class="row">
               <h2 class="text-center">Your next trip</h2>
 
-              <div class="col-xs-12 col-sm-4">
-                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
-                  <%= image_tag "arthur.jpg", class: "avatar avatar-large card-user" %>
-                  <div class="card-category">Paris</div>
-                  <div class="card-description">
-                    <h2>Arthur's home</h2>
-                    <p>Charming room with patio</p>
+              <% data.flats.each do |owner, flat| %>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="card" style="background: url('<%= image_path flat.picture %>');"">
+                    <div class="card-category"> <%= flat.city %></div>
+                      <div class="card-description">
+                        <h2><%= flat.name %></h2>
+                        <p><%= flat.summary %></p>
+                      </div>
+                      <%= image_tag flat.owner_picture, class:"card-user avatar-large" %>
+                      <%= link_to "#", "flats/#{owner}.html", class:"card-link" %>
                   </div>
                 </div>
-              </div>
-
-              <div class="col-xs-12 col-sm-4">
-                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
-                  <%= image_tag "roxane.jpg", class: "avatar avatar-large card-user" %>
-                  <div class="card-category">Brussels</div>
-                  <div class="card-description">
-                    <h2>Roxane's home</h2>
-                    <p>Lovely house</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xs-12 col-sm-4">
-                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
-                  <%= image_tag "guillaume.jpg", class: "avatar avatar-large card-user" %>
-                  <div class="card-category">London</div>
-                  <div class="card-description">
-                    <h2>Guillaume's home</h2>
-                    <p>Nice flat in Piccadilly</p>
-                  </div>
-                </div>
-              </div>
+                <% end %>
             </div>
           </div>
         </div>
