--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -26,7 +26,7 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #8F3985;
 
-$red: #EE5F5B;
+$red: #563440;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
