--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -2,6 +2,7 @@
   background: $gray-white;
   padding: 30px 0;
   color: $gray-dark;
+  margin-bottom: 0;
   i {
     color: $gray-dark;
     font-size: 30px;
